--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,6 +7,8 @@ body {
   font-family: 'Georgia Serif', Georgia, serif;
   background-color: #FFF9C4;
   color: #333;
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5 0v10M0 5h10' stroke='%232E8B57' stroke-width='1'/%3E%3C/svg%3E");
+  background-size: 20px 20px;
 }
 
 a {
