--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,8 @@ body {
   font-family: 'Georgia Serif', Georgia, serif;
   background-color: #FFF9C4;
   color: #333;
-  background-image: url("data:image/svg+xml,%3Csvg width='33' height='33' viewBox='0 0 33 33' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%232E8B57' stroke-width='1'%3E%3Cpath d='M10,10 L20,20 M20,10 L10,20 M30,40 L40,50 M40,40 L30,50 M60,20 L70,30 M70,20 L60,30 M80,70 L90,80 M90,70 L80,80 M50,60 L60,70 M60,60 L50,70' /%3E%3C/g%3E%3C/svg%3E");
-  background-size: 200px 200px;
+  background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%232E8B57' stroke-width='1'%3E%3Cpath d='M3,3 L6,6 M6,3 L3,6' /%3E%3C/g%3E%3C/svg%3E");
+  background-size: 8px 8px;
 }
 
 a {
