--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,11 +39,13 @@
         </ul>
         {% endif %}
       </header>
-      <section>
+      <div class="main-container">
+        <section>
 
-      {{ content }}
+          {{ content }}
 
-      </section>
+        </section>
+      </div>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
