--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -63,3 +63,9 @@ a {
   /* Add any other styles you wish to apply to the wrapper */
 }
 
+.main-container {
+  background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white */
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 1200px; /* or whatever max width you prefer */
+}
