--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,7 +62,7 @@ a {
   padding: 20px; /* Adds space inside the container */
   display: flex;
   flex-direction: column;
-  gap: 20px:
+  gap: 20px;
 }
 
 @media (min-width: 768px) {
