--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,11 +19,11 @@ a {
 }
 
 .site-logo {
-  width: 234px; /* Set the width as desired */
-  height: auto; /* Keeps the aspect ratio of the image */
-  border: 1px solid #2E8B57; /* Pine green border */
-  display: block; /* To correctly apply margins if needed */
-  margin: 0; /* Centers the image if within a block-level container */
+  width: 205px; 
+  height: auto; 
+  border: 1px solid #2E8B57; 
+  display: block; 
+  margin: 0; 
 }
 
 .header {
