--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,18 @@
         <a href="https://richmulvany.hashnode.dev">
       <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
         </a>
+        <a href="https://richmulvany.hashnode.dev">
+      <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
+        </a>
+        <a href="https://richmulvany.hashnode.dev">
+      <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
+        </a>
+        <a href="https://richmulvany.hashnode.dev">
+      <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
+        </a>
+        <a href="https://richmulvany.hashnode.dev">
+      <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
+        </a>
       </div>
       </section>
     </div>
