--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 body {
-  font-family: 'Georgia Serif', Georgia, serif;
+  font-family: 'DejaVu Sans Mono', monospace;
   background-color: #f0f0f0;
   color: #333;
   background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' stroke='%232E8B57' stroke-width='1'%3E%3Cpath d='M2,2 L6,6 M6,2 L2,6' /%3E%3C/g%3E%3C/svg%3E");
