--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -98,7 +98,7 @@ a {
 }
 
 #blog-posts .blog-post {
-  max-width: 150px; /* Adjust the overall size of the blog post buttons */
+  max-width: 360px; /* Adjust the overall size of the blog post buttons */
   margin: 0 auto 20px; /* Center align and add bottom margin */
   overflow: hidden; /* Ensures content fits within the borders */
   border-radius: 10px; /* Keeps the rounded corners */
@@ -110,6 +110,15 @@ a {
   display: block;
   text-decoration: none; /* Removes underline from links */
   color: inherit; /* Inherits text color from parent */
+}
+
+#blog-posts .blog-post {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+#blog-posts .blog-post.fade-in {
+  opacity: 1;
 }
 
 #blog-posts .blog-post img {
