--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -103,7 +103,8 @@ a {
   overflow: hidden; /* Ensures content fits within the borders */
   border-radius: 10px; /* Keeps the rounded corners */
   box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Adds a shadow */
-  transition: transform 0.3s ease; /* Smooth transition for hover effects */
+  transition: transform 0.3s ease, opacity 0.5s ease-in-out; /* Include opacity transition here */
+  border: 1px solid transparent;
 }
 
 #blog-posts .blog-post a {
@@ -127,7 +128,7 @@ a {
   display: block; /* Remove any extra space below the image */
 }
 
-#blog-posts .blog-post a:hover {
+#blog-posts .blog-post :hover {
   transform: scale(1.05); /* Optional: Slightly increases size on hover for emphasis */
   border-color: #2E8B57; /* Pine green border on hover */
 }
