--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,9 +12,9 @@ body {
 }
 
 a {
-  color: #20603D; /* Darker Pine green */
+  color: #20603D;
   &:hover {
-    color: #2E8B57; /* Pine Green */
+    color: #2E8B57;
   }
 }
 
@@ -30,16 +30,16 @@ a {
   background-color: #333;
   color: white;
   padding: 20px 0;
-
+  
   h1 {
     margin: 0;
     font-size: 24px;
-    color: #2E8B57; /* Pine green */
+    color: #2E8B57;
   }
 }
 
 .button {
-  background-color: #4CAF50; /* Green */
+  background-color: #4CAF50;
   border: none;
   color: white;
   padding: 15px 32px;
@@ -49,7 +49,7 @@ a {
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-
+  
   &:hover {
     background-color: #45a049;
   }
@@ -81,55 +81,56 @@ a {
 
 @media (min-width: 768px) {
   .wrapper {
+    display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .left-column, .main-container {
-    flex-basis: 48%; 
-    margin: 20px 0; 
   }
   .left-column {
-
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    height: 100vh;
+    width: 300px;
+    background-color: white;
+    padding: 20px;
+    box-sizing: border-box;
+    z-index: 10;
   }
   .main-container {
     flex-grow: 1;
+    overflow: auto;
+    height: 100vh;
+    margin-left: 20px; /* Ensure some space between the columns */
   }
 }
 
 #blog-posts .blog-post {
-  max-width: 420px; /* Adjust the overall size of the blog post buttons */
-  margin: 0 auto 20px; /* Center align and add bottom margin */
-  overflow: hidden; /* Ensures content fits within the borders */
-  border-radius: 10px; /* Keeps the rounded corners */
-  box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* Adds a shadow */
-  transition: transform 0.3s ease, opacity 0.5s ease-in-out; /* Include opacity transition here */
+  max-width: 420px;
+  margin: 0 auto 20px;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+  transition: transform 0.3s ease, opacity 0.5s ease-in-out;
   border: 1px solid transparent;
-}
-
-#blog-posts .blog-post a {
-  display: block;
-  text-decoration: none; /* Removes underline from links */
-  color: inherit; /* Inherits text color from parent */
-}
-
-#blog-posts .blog-post {
   opacity: 0;
-  transition: opacity 0.5s ease-in-out;
 }
 
 #blog-posts .blog-post.fade-in {
   opacity: 1;
 }
 
+#blog-posts .blog-post a {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+
 #blog-posts .blog-post img {
-  width: 100%; /* Ensures the image scales with the container */
-  height: auto; /* Maintain aspect ratio */
-  display: block; /* Remove any extra space below the image */
+  width: 100%;
+  height: auto;
+  display: block;
 }
 
 #blog-posts .blog-post:hover {
-  transform: scale(1.05); /* Optional: Slightly increases size on hover for emphasis */
+  transform: scale(1.05);
   border-color: #2E8B57; /* Pine green border on hover */
 }
-
