--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,29 +13,30 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="left-column">
-      <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        {% if site.logo %}
-        <img src="{{site.logo | relative_url}}" alt="Logo" class="site-logo" />
-        {% endif %}
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
-      </header>
-    </div>
-    <div class="main-container">
+    <div class="left-background">
+      <div class="left-column">
+        <header>
+          <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+          {% if site.logo %}
+          <img src="{{site.logo | relative_url}}" alt="Logo" class="site-logo" />
+          {% endif %}
+          <p>{{ site.description | default: site.github.project_tagline }}</p>
+          {% if site.github.is_project_page %}
+          <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
+          {% endif %}
+          {% if site.github.is_user_page %}
+          <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+          {% endif %}
+          {% if site.show_downloads %}
+          <ul class="downloads">
+            <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+            <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
+            <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
+          </ul>
+          {% endif %}
+        </header>
+      </div>
+      <div class="main-container">
       <section>
         {{ content }}
       <!-- Blog Posts Section -->
@@ -65,9 +66,10 @@
     <a href="https://richmulvany.hashnode.dev">
       <img src="https://cdn.hashnode.com/res/hashnode/image/upload/v1708609112033/c0e5c2d7-4e2b-46d2-a637-8960b0dd38e9.png?w=1600&h=840&fit=crop&crop=entropy&auto=compress,format&format=webp" alt="Exploring Global Female Literacy and Infant Mortality Rates">
     </a>
-  </div>
-      </div>
-      </section>
+    </div>
+        </div>
+        </section>
+    </div>
   </div>
   <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   <!-- Include Intersection Observer Script Here for Fade-In Effect -->
